--- a/src/_styles/theme.scss
+++ b/src/_styles/theme.scss
@@ -171,6 +171,9 @@ body {
 //   }
 // }
 
+.findify-autocomplete {
+  position: fixed;
+}
 
 .fade-animate {
   transform: translateY( 200px );
